--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonld": "^0.4.12",
     "linkscrape": "^1.0.0",
     "lodash": "^4.17.4",
+    "normalize-url": "^2.0.1",
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
@@ -27,6 +28,7 @@
     "babel-core": "^6.26.0",
     "babel-eslint": "7",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
