--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "linkscrape": "^1.0.0",
     "lodash": "^4.17.4",
     "normalize-url": "^2.0.1",
+    "request": "^2.83.0",
     "winston": "^3.0.0-rc1"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "express": "^4.16.2",
     "http-server": "^0.11.1",
     "jest": "^22.0.6",
     "webpack": "^3.6.0"
