Middleware to throttle requests

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "express": "^4.16.2",
     "http-server": "^0.11.1",
     "jest": "^22.0.6",
+    "sinon": "^4.2.0",
     "webpack": "^3.6.0"
   }
 }
