--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "spider",
     "scraper",
     "configurable",
+    "middleware",
     "search",
     "nodejs",
     "jquery",
@@ -34,6 +35,7 @@
     "linkscrape": "^1.0.0",
     "lodash": "^4.17.4",
     "normalize-url": "^2.0.1",
+    "occurences": "^2.2.2",
     "request": "^2.83.0",
     "stacktrace-parser": "^0.1.4",
     "winston": "^3.0.0-rc1"
