--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "normalize-url": "^2.0.1",
     "occurences": "^2.2.2",
     "request": "^2.83.0",
+    "robots-parser": "^1.0.1",
     "stacktrace-parser": "^0.1.4",
     "winston": "^3.0.0-rc1"
   },
