--- a/package.json
+++ b/package.json
@@ -27,10 +27,6 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "core-decorators": "^0.20.0",
-    "crawler": "^1.1.2",
-    "date-fns": "^1.29.0",
-    "eslint": "3.x",
-    "jsdom": "^11.2.0",
     "jsonld": "^0.4.12",
     "linkscrape": "^1.0.0",
     "lodash": "^4.17.4",
@@ -48,9 +44,12 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
+    "eslint": "3.x",
     "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-babel": "^4.1.2",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
