--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "jest": "^22.0.6",
     "sinon": "^4.2.0",
     "webpack": "^3.6.0"
+  },
+  "peerDependencies": {
+    "redis": "^2.8.0"
   }
 }
