--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "webpack": "^3.6.0"
   },
   "peerDependencies": {
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "zeromq": "^4.6.0"
   }
 }
