--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "scripts": {
     "test": "jest",
-    "start": "babel-node src/main.js",
+    "start": "node examples/main.js",
     "lint": "eslint src/"
   },
   "author": "g.tavonius@gmail.com",
@@ -41,28 +41,16 @@
     "zeromq": "^4.6.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "7",
-    "babel-loader": "^7.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-export-extensions": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
     "eslint": "3.x",
     "eslint-config-standard": "^11.0.0-beta.0",
-    "eslint-plugin-babel": "^4.1.2",
-    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-import": "^2.13.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "express": "^4.16.2",
     "http-server": "^0.11.1",
     "jest": "^22.0.6",
-    "sinon": "^4.2.0",
-    "webpack": "^3.6.0"
+    "sinon": "^4.2.0"
   },
-  "peerDependencies": {
-  }
+  "peerDependencies": {}
 }
