--- a/package.json
+++ b/package.json
@@ -38,15 +38,14 @@
     "robots-parser": "^1.0.1",
     "stacktrace-parser": "^0.1.4",
     "winston": "^3.0.0-rc1",
-    "zeromq": "^4.6.0"
+    "zeromq": "^5.2.0"
   },
   "devDependencies": {
-    "eslint": "3.x",
-    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint": "^7.8.0",
+    "eslint-config-standard": "^16.0.0",
     "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-node": "^5.2.1",
-    "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.0",
     "express": "^4.16.2",
     "http-server": "^0.11.1",
     "jest": "^22.0.6",
