--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "plugnsearch",
+  "name": "@plugnsearch/core",
   "version": "1.0.0",
   "description": "The only real plugable webspider / webcrawler to search the web for stuff you need.",
   "main": "index.js",
-  "private": true,
   "keywords": [
     "crawler",
     "spider",
