--- a/package.json
+++ b/package.json
@@ -25,30 +25,31 @@
   "author": "g.tavonius@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "cheerio": "^1.0.0-rc.2",
+    "cheerio": "^1.0.0-rc.10",
     "core-decorators": "^0.20.0",
     "jsonld": "^0.4.12",
     "linkscrape": "^1.0.0",
     "lodash": "^4.17.21",
     "normalize-url": "^2.0.1",
     "occurences": "^2.2.2",
-    "redis": "^3.1.1",
-    "request": "^2.83.0",
-    "robots-parser": "^1.0.1",
-    "stacktrace-parser": "^0.1.4",
-    "winston": "^3.0.0-rc1",
+    "redis": "^3.1.2",
+    "request": "^2.88.2",
+    "robots-parser": "^1.0.2",
+    "stacktrace-parser": "^0.1.10",
+    "winston": "^3.3.3",
     "zeromq": "^5.2.0"
   },
   "devDependencies": {
-    "eslint": "^7.8.0",
-    "eslint-config-standard": "^16.0.0",
-    "eslint-plugin-import": "^2.13.0",
+    "esbuild": "^0.12.20",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.24.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.0",
-    "express": "^4.16.2",
-    "http-server": "^0.11.1",
-    "jest": "^22.0.6",
-    "sinon": "^4.2.0"
+    "express": "^4.17.1",
+    "http-server": "^0.11.2",
+    "jest": "^22.4.4",
+    "sinon": "^4.5.0"
   },
   "peerDependencies": {}
 }
